fixed sections aligned to right

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -163,6 +163,10 @@ header nav .nav-brand img {
   }
 }
 
+header nav .nav-sections {
+  margin-left: auto;
+}
+
 header nav[aria-expanded="true"] .nav-sections {
   display: flex;
   justify-content: flex-end;
